
Name:           hep-root-plot
Version:        0.2
Cabal-Version:  >= 1.6
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/hep-root-plot
Category:       Data
Build-Type:     Simple
Synopsis:       Client for plotting using rt-plot
Description:
  Client for plotting using rt-plot

Library
  ghc-options:		-Wall
  Build-Depends:
    base >=3 && <5,
    unix,
    directory,
    network,
    transformers,
    histogram-fill
  Exposed-modules:
    HEP.ROOT.Plot
    HEP.ROOT.Plot.AST
