Name:           hep-root-plot
Version:        0.2.10.0
Cabal-Version:  >= 1.6
License:        AllRightsReserved
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       http://bitbucket.org/Shimuuar/hep-root-plot
Category:       Data
Build-Type:     Simple
Synopsis:       Client for plotting using rt-plot
Description:
  Client for plotting using rt-plot

Library
  Ghc-options:		-Wall -O2
  Ghc-prof-options:     -auto-all
  Build-Depends:
    base >=3 && <5,
    unix,
    directory,
    network,
    transformers,
    bytestring,
    blaze-builder,
    vector,
    histogram-fill
  Exposed-modules:
    HEP.ROOT.Plot
    HEP.ROOT.Plot.AST
    HEP.ROOT.Plot.Extra
